Сценарий просмотра списка файлов пользователя
