# webapp/src/main/java/ru/netology/cloudstorage/webapp/controller/AppFileController.java
@@ -2,8 +2,8 @@ package ru.netology.cloudstorage.webapp.controller;
 
 
 import jakarta.annotation.Resource;
+import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.MediaType;
 import org.springframework.security.access.annotation.Secured;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -15,10 +15,18 @@ import ru.netology.cloudstorage.contracts.auth.model.PermissionFiles;
 import ru.netology.cloudstorage.contracts.core.boundary.create.CreateCloudFileInput;
 import ru.netology.cloudstorage.contracts.core.boundary.create.CreateCloudFileInputRequest;
 import ru.netology.cloudstorage.contracts.core.boundary.create.CreateCloudFileInputResponse;
+import ru.netology.cloudstorage.contracts.core.boundary.list.ListCloudFileInput;
+import ru.netology.cloudstorage.contracts.core.boundary.list.ListCloudFileInputRequest;
+import ru.netology.cloudstorage.contracts.core.boundary.list.ListCloudFileInputResponse;
 import ru.netology.cloudstorage.contracts.core.model.CloudUser;
 import ru.netology.cloudstorage.contracts.core.model.TraceId;
+import ru.netology.cloudstorage.core.boundary.list.CoreListCloudFileInputRequest;
 import ru.netology.cloudstorage.webapp.boundary.AppCreateCloudFileResource;
 import ru.netology.cloudstorage.webapp.boundary.AppCreateFileInputRequest;
+import ru.netology.cloudstorage.webapp.boundary.AppListCloudFileInputResponse;
+import ru.netology.cloudstorage.webapp.factory.AppListCloudFileInputResponsePresenter;
+
+import java.util.List;
 
 /**
  * AppFileController
@@ -29,7 +37,6 @@ import ru.netology.cloudstorage.webapp.boundary.AppCreateFileInputRequest;
  * <a href="https://www.baeldung.com/get-user-in-spring-security#interface">Get the User via a Custom Interface</a><br>
  * </p>
  */
-@Slf4j
 @RestController
 @RequiredArgsConstructor
 public class AppFileController {
@@ -38,6 +45,9 @@ public class AppFileController {
     private TraceId requestTraceId;
 
     private final CreateCloudFileInput createCloudFileInteractor;
+
+    private final ListCloudFileInput listCloudFileInteractor;
+    private final AppListCloudFileInputResponsePresenter listCloudFileInputResponsePresenter;
 
     @PostMapping(value = "/file", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     @Secured(PermissionFiles.CREATE)
@@ -49,8 +59,10 @@ public class AppFileController {
 
     @GetMapping("/list")
     @Secured(PermissionFiles.LIST)
-    public String getFilesList(int limit, @AuthenticationPrincipal CloudUser user) {
-        log.info("traceId={}, hashCode={}; {}", requestTraceId.getId(), user.getId().hashCode(), user);
-        return "No";
+    public List<AppListCloudFileInputResponse> getFilesList(@Validated @Positive int limit,
+            @AuthenticationPrincipal CloudUser user) {
+        ListCloudFileInputRequest request = new CoreListCloudFileInputRequest(user, limit, requestTraceId);
+        ListCloudFileInputResponse response = listCloudFileInteractor.find(request);
+        return listCloudFileInputResponsePresenter.format(response);
     }
 }
